docs/envoy/v1.15.0/_sources/api-v3/config/listener/v3/quic_config.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/listener/v3/quic_config.proto:

QUIC listener Config
====================


.. _envoy_v3_api_msg_config.listener.v3.QuicProtocolOptions:

config.listener.v3.QuicProtocolOptions
--------------------------------------

`[config.listener.v3.QuicProtocolOptions proto] <https://github.com/envoyproxy/envoy/blob/v1.15.0/api/envoy/config/listener/v3/quic_config.proto#L21>`_

Configuration specific to the QUIC protocol.
Next id: 5

.. code-block:: json

  {
    "max_concurrent_streams": "{...}",
    "idle_timeout": "{...}",
    "crypto_handshake_timeout": "{...}",
    "enabled": "{...}"
  }

.. _envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.max_concurrent_streams:

max_concurrent_streams
  (`UInt32Value <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#uint32value>`_) Maximum number of streams that the client can negotiate per connection. 100
  if not specified.
  
  
.. _envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.idle_timeout:

idle_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Maximum number of milliseconds that connection will be alive when there is
  no network activity. 300000ms if not specified.
  
  
.. _envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.crypto_handshake_timeout:

crypto_handshake_timeout
  (`Duration <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#duration>`_) Connection timeout in milliseconds before the crypto handshake is finished.
  20000ms if not specified.
  
  
.. _envoy_v3_api_field_config.listener.v3.QuicProtocolOptions.enabled:

enabled
  (:ref:`config.core.v3.RuntimeFeatureFlag <envoy_v3_api_msg_config.core.v3.RuntimeFeatureFlag>`) Runtime flag that controls whether the listener is enabled or not. If not specified, defaults
  to enabled.
  
  

